# [#23826] Fix regression in Category Manager: escaped too much # [#23885] Restore support for old templates from K1.6.1
git-svn-id: file:///Users/oratzes/svn/kunena@4033 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.ie7.css
+++ b/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.ie7.css
@@ -41,7 +41,7 @@
 #Kunena div.kcc-subcat { float: none; display: inline; }
 #Kunena td.kcol-first { background: transparent; }
 #Kunena .kblock div.kheader { background: #000000 !important; }
-#Kunena H2 A { color: #ffffff !important;}
+#Kunena h2 a { color: #ffffff !important;}
 #Kunena span.kforummoderated,
 #Kunena span.kforumlocked { position: relative; bottom: 3px; left: 5px; }
 #Kunena div.current dd { text-align: left; overflow: hidden; padding:0; }
